fix background color on iOS

--- a/src/styles/core/_reset.scss
+++ b/src/styles/core/_reset.scss
@@ -33,6 +33,7 @@ html,
 body {
 	/* mobile viewport bug fix */
 	min-height: -webkit-fill-available;
+	background-color: var(--c-deepOcean);
 }
 
 body {
